tests/expectations/parser-statement/statement/return_fail.out
Error [EPAR0370009]: unexpected string: expected 'expression', found '<eof>'
    --> test_0:1:1
     |
   1 | return
     | ^^^^^^
Error [EPAR0370005]: expected ; -- found '<eof>'
    --> test_1:1:8
     |
   1 | return 5
     |        ^
Error [EPAR0370009]: unexpected string: expected 'expression', found 'if'
    --> test_2:2:1
     |
   2 | if x {}
     | ^^
